exercise_apps/log_output_reader/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: log-output-dep
    namespace: exercises-namespace
spec:
    replicas: 1
    selector:
        matchLabels:
            app: log-output
    template:
        metadata:
            labels:
                app: log-output
        spec:
            volumes:
                - name: shared-timestamp
                  emptyDir: {}
                #  - name: shared-pings
                #    persistentVolumeClaim:
                #        claimName: log-output-claim
            containers:
                - name: log-output-reader
                  image: ktatu/log-output-reader:2.6
                  volumeMounts:
                      - name: shared-timestamp
                        mountPath: /usr/src/app/files/timestamp
                      #  - name: shared-pings
                      #    mountPath: /usr/src/app/files/pings
                - name: log-output-generator
                  image: ktatu/log-output-generator:1.1
                  volumeMounts:
                      - name: shared-timestamp
                        mountPath: /usr/src/app/files/timestamp
