exercise_apps/log_output_reader/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: log-output-svc
    namespace: exercises-namespace
spec:
    type: ClusterIP
    selector:
        app: log-output
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 3002
